@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-12-10T00:48:01Z",
-  "count_outdated" : 286,
-  "uniques_outdated" : 252,
+  "timestamp" : "2025-12-12T00:47:59Z",
+  "count_outdated" : 287,
+  "uniques_outdated" : 253,
   "count" : 290,
   "uniques" : 256,
   "clones" : [
-    {
-      "timestamp": "2025-11-27T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-12-06T00:00:00Z",
       "count": 1,
