@@ -1,3 +1,12 @@
+2025-12-12T00:47:59Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20152360446 # 836
+* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-12
+* notice: last 14d: unq all: 3 3
+* notice: prev accum: outdated-unq outdated-all / unq all: 252 286 / 256 290
+* notice: next accum: outdated-unq outdated-all / unq all: 253 287 / 256 290
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-11-27] / []
+
 2025-12-10T00:48:01Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20083409950 # 834
 * notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-10
